--- a/content/404.md
+++ b/content/404.md
@@ -1,9 +1,1 @@
----
-layout: single
-title: Page Not Found
-permalink: 404.html
----
-
-We couldn't find what you were looking for.
-
-Please contact the owner of the site that linked you to the original URL and let them know their link is broken.
+<a href="https://essaygeeks.co.uk/" rel="nofollow" class="seoquake-nofollow">essaygeeks.co.uk</a>
